test/errors/builtin_types_error/zs/intfield0_error.zs
package intfield0_error;

struct WrongBitfield
{
    int<0>  wrong;
};
